# coffee_machine

./: .env  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  database.py  machine.py  main.py  openrouter.py  schemas.py
docs/: PLAN.md
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
scripts/: start_mac_linux.sh  start_windows.ps1  stop_mac_linux.sh  stop_windows.ps1
tests/: test_api.py  test_machine.py
